--- a/nginx/site.nginx.conf
+++ b/nginx/site.nginx.conf
@@ -1,6 +1,6 @@
 server {
   index index.php index.html;
-  server_name wpghdocs.test;
+  server_name bedrock.test;
   error_log  /var/log/nginx/error.log;
   access_log /var/log/nginx/access.log;
   root /code/web;
