--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,21 +11,22 @@ services:
   php:
     build: .
     environment:
-      AUTH_KEY: generateme
-      AUTH_SALT: generateme
-      DB_HOST: db
-      DB_NAME: database_name
-      DB_PASSWORD: database_password
-      DB_USER: root
-      LOGGED_IN_KEY: generateme
-      LOGGED_IN_SALT: generateme
-      NONCE_KEY: generateme
-      NONCE_SALT: generateme
-      SECURE_AUTH_KEY: generateme
-      SECURE_AUTH_SALT: generateme
-      WP_ENV: development
-      WP_HOME: http://bedrock.test
-      WP_SITEURL: http://bedrock.test/wp
+      BOGUS: 'yes'
+      #AUTH_KEY: generateme
+      #AUTH_SALT: generateme
+      #DB_HOST: db
+      #DB_NAME: database_name
+      #DB_PASSWORD: database_password
+      #DB_USER: root
+      #LOGGED_IN_KEY: generateme
+      #LOGGED_IN_SALT: generateme
+      #NONCE_KEY: generateme
+      #NONCE_SALT: generateme
+      #SECURE_AUTH_KEY: generateme
+      #SECURE_AUTH_SALT: generateme
+      #WP_ENV: development
+      #WP_HOME: http://bedrock.test
+      #WP_SITEURL: http://bedrock.test/wp
     volumes:
       - ./site:/code
       - ./config/php.ini:/usr/local/etc/php/conf.d/bedrock.ini
